# torch-cpp-trainer

./: .clang-format  CMakeLists.txt  README.md
example/cifar10_resnet/: CMakeLists.txt  cifar10_resnet_factory.hpp  train.cpp
include/: cifar10_dataset.hpp  datasets_utils.hpp  dummy_dataset.hpp  module_utils.hpp  residual_block.hpp  resnet.hpp  task_factory.hpp  trainer.hpp
src/: cifar10_dataset.cpp  main.cpp  residual_block.cpp  resnet.cpp  trainer.cpp
tests/: CMakeLists.txt  test_dataset.cpp  test_module_utils.cpp  test_reset.cpp
